--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
   "name": "SaffronMurray",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": "true",
   "scripts": {
-    "start": "node server.js",
-    "servedev": "npx nodemon server.js",
+    "start": "npx @11ty/eleventy --input=./saffronmurray.com --serve",
     "lint-tooling": "npx eslint '*.js' 'tooling/**/*.js'",
-
-    "build": "npm-run-all buildsite:*",
-    "lint": "npm-run-all lint:*:* lint-tooling",
+    "build": "node tooling/clean.js saffronmurray.com && npm-run-all build:*",
+    "lint": "npm-run-all lint:* lint-tooling",
     "dev": "npm-run-all lint build watch",
-    "watch": "npm-run-all --parallel watchsite:*",
-
-    "buildsite:saffronmurray.com": "node tooling/clean.js saffronmurray.com && npm-run-all build:*:saffronmurray",
-    "watchsite:saffronmurray.com": "npm-run-all --parallel watch:*:saffronmurray",
-    "devsite:saffronmurray.com": "npm-run-all lint:*:saffronmurray buildsite:saffronmurray.com watchsite:saffronmurray.com",
-    "lint:styles:saffronmurray": "npm-run-all prettify:saffronmurray stylelint:saffronmurray",
-    "prettify:saffronmurray": "prettier './saffronmurray.com/assets/styles/**/*.scss' --write",
-    "stylelint:saffronmurray": "stylelint './saffronmurray.com/assets/styles/**/*.scss' --customSyntax postcss-scss",
-    "build:images:saffronmurray": "node tooling/process-images.js saffronmurray.com",
-    "build:styles:saffronmurray": "node tooling/build-css.js saffronmurray.com",
-    "watch:images:saffronmurray": "onchange './saffronmurray.com/assets/images/**/*' -- npm run build:images:saffronmurray",
-    "watch:styles:saffronmurray": "onchange './saffronmurray.com/assets/styles/**/*.scss' -- npm-run-all lint:styles:saffronmurray build:styles:saffronmurray"
+    "watch": "npm-run-all --parallel watch:*",
+    "lint:styles": "npm-run-all prettify stylelint",
+    "prettify": "prettier './saffronmurray.com/assets/styles/**/*.scss' --write",
+    "stylelint": "stylelint './saffronmurray.com/assets/styles/**/*.scss' --customSyntax postcss-scss",
+    "build:images": "node tooling/process-images.js saffronmurray.com",
+    "build:styles": "node tooling/build-css.js saffronmurray.com",
+    "watch:images": "onchange './saffronmurray.com/assets/images/**/*' -- npm run build:images",
+    "watch:styles": "onchange './saffronmurray.com/assets/styles/**/*.scss' -- npm-run-all lint:styles build:styles"
   },
   "author": "Clive Murray <clive+murray@clivemurray.com>",
   "license": "UNLICENSED",
@@ -30,23 +24,10 @@
     ">0.3%, last 5 versions, not dead"
   ],
   "engines": {
-    "node": "18.14.2"
+    "node": "20.3.1"
   },
   "devDependencies": {
-    "eslint": "7.17.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-no-use-extend-native": "0.5.0",
-    "eslint-plugin-promise": "4.3.1",
-    "eslint-plugin-unicorn": "28.0.2",
-    "@springernature/eslint-config": "5.0.5",
-    "nodemon": "2.0.20",
-    "onchange": "7.1.0",
-    "stylelint": "14.16.1",
-    "stylelint-config-prettier": "9.0.4",
-    "stylelint-config-standard-scss": "6.1.0",
-    "stylelint-scss": "4.3.0"
-  },
-  "dependencies": {
+    "@11ty/eleventy": "^2.0.1",
     "@babel/core": "7.20.12",
     "@babel/plugin-proposal-object-rest-spread": "7.20.7",
     "@babel/plugin-transform-object-assign": "7.18.6",
@@ -54,9 +35,16 @@
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "@springernature/eslint-config": "5.0.5",
     "autoprefixer": "10.4.13",
     "del": "7.0.0",
+    "eslint": "7.17.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-no-use-extend-native": "0.5.0",
+    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-unicorn": "28.0.2",
     "npm-run-all": "4.1.5",
+    "onchange": "7.1.0",
     "postcss": "8.4.21",
     "postcss-csso": "6.0.1",
     "postcss-custom-properties": "12.1.11",
@@ -65,14 +53,11 @@
     "rollup": "3.9.1",
     "sass": "1.57.1",
     "sharp": "0.31.3",
+    "stylelint": "14.16.1",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-standard-scss": "6.1.0",
+    "stylelint-scss": "4.3.0",
     "svgo": "3.0.2",
-    "connect": "3.7.0",
-    "express": "4.18.2",
-    "express-handlebars": "6.0.6",
-    "handlebars": "4.7.7",
-    "moment": "2.29.4",
-    "svg-social-icons": "1.1.0",
-    "util": "0.12.5",
-    "vhost": "3.0.2"
+    "util": "0.12.5"
   }
 }
