--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-plugin-unicorn": "28.0.2",
     "npm-run-all": "4.1.5",
     "onchange": "7.1.0",
-    "postcss": "8.4.21",
+    "postcss": "8.4.31",
     "postcss-csso": "6.0.1",
     "postcss-custom-properties": "12.1.11",
     "postcss-scss": "4.0.6",
@@ -53,10 +53,10 @@
     "rollup": "3.9.1",
     "sass": "1.57.1",
     "sharp": "0.31.3",
-    "stylelint": "14.16.1",
+    "stylelint": "15.10.1",
     "stylelint-config-prettier": "9.0.4",
-    "stylelint-config-standard-scss": "6.1.0",
-    "stylelint-scss": "4.3.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-scss": "^5.0.1",
     "svgo": "3.0.2",
     "util": "0.12.5"
   }
