rename src folder

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "SaffronMurray",
+  "name": "saffronmurray-dot-com",
   "version": "0.4.0",
   "private": "true",
   "scripts": {
-    "start": "npx @11ty/eleventy --input=./saffronmurray.com --serve",
+    "start": "npx @11ty/eleventy --input=./src --serve",
     "lint-tooling": "npx eslint '*.js' 'tooling/**/*.js'",
-    "build": "node tooling/clean.js saffronmurray.com && npm-run-all build:*",
+    "build": "node tooling/clean.js src && npm-run-all build:*",
     "lint": "npm-run-all lint:* lint-tooling",
     "dev": "npm-run-all lint build && npm-run-all --parallel start watch",
     "watch": "npm-run-all --parallel watch:*",
     "lint:styles": "npm-run-all prettify stylelint",
-    "prettify": "prettier './saffronmurray.com/assets/styles/**/*.scss' --write",
-    "stylelint": "stylelint './saffronmurray.com/assets/styles/**/*.scss' --customSyntax postcss-scss",
-    "build:images": "node tooling/process-images.js saffronmurray.com",
-    "build:styles": "node tooling/build-css.js saffronmurray.com",
-    "watch:images": "onchange './saffronmurray.com/assets/images/**/*' -- npm run build:images",
-    "watch:styles": "onchange './saffronmurray.com/assets/styles/**/*.scss' -- npm-run-all lint:styles build:styles"
+    "prettify": "prettier './src/assets/styles/**/*.scss' --write",
+    "stylelint": "stylelint './src/assets/styles/**/*.scss' --customSyntax postcss-scss",
+    "build:images": "node tooling/process-images.js src",
+    "build:styles": "node tooling/build-css.js src",
+    "watch:images": "onchange './src/assets/images/**/*' -- npm run build:images",
+    "watch:styles": "onchange './src/assets/styles/**/*.scss' -- npm-run-all lint:styles build:styles"
   },
   "author": "Clive Murray <clive+murray@clivemurray.com>",
   "license": "UNLICENSED",
